--- a/content/module1.html
+++ b/content/module1.html
@@ -4,5 +4,5 @@
     <h1>Add sections in your content</h1>
     <p>
         Add some content to your book's first module. A module is a small piece of a book. It could be an introduction, a section of a chapter, or a small chapter.</p><p>
-    <br></p><p>User -2 content added</p><p><br></p><p>Editing ..</p>
+    <br></p><p>User -2 content added</p><p><br></p><p>Editing ..</p><p><br></p><p>This content will be merged .&nbsp;</p>
 </body></html>
