--- a/content/module1.html
+++ b/content/module1.html
@@ -1,8 +1,8 @@
 <!--?xml version="1.0" encoding="UTF-8"?--><html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"><head><title>Chapter 1</title><meta data-type="language" itemprop="inLanguage" content="undefined"></head>
-  <body><div data-type="metadata" itemscope="itemscope" itemtype="http://schema.org/CreativeWork"><h1 data-type="title" itemprop="name">Chapter 1</h1></div>
+  <body><div data-type="metadata" itemscope="itemscope" itemtype="http://schema.org/CreativeWork"><h1 data-type="title" itemprop="name" id="b2e97636-f658-e04d-9cdc-b1e65de2723c">Chapter 1</h1></div>
   
-    <h1>Add sections in your content</h1>
+    <h1 id="06e95d23-0130-dd28-e47c-34a5f53a0fa7">Add sections in your content</h1>
     <p>
         Add some content to your book's first module. A module is a small piece of a book. It could be an introduction, a section of a chapter, or a small chapter.</p><p>
-    <br></p><p>User -2 content added</p><p><br></p><p>Editing ..</p><p><br></p><p>This content will be merged .&nbsp;</p>
+    <br></p><p>User -2 content added</p><p><br></p><p>Editing ..</p><p><br></p><p>This content will be merged .&nbsp;</p><p><br></p><p>This is regular word editor with internet content embedment very easily .&nbsp;</p><p><br></p><p>Need to save the content &nbsp;.</p>
 </body></html>
